--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,6 +40,12 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:34.5.0')
+    // TODO: Add the dependencies for Firebase products you want to use
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics'
+
 }
 
 apply from: 'capacitor.build.gradle'
